--- a/Flappy-Bird/styles.css
+++ b/Flappy-Bird/styles.css
@@ -19,7 +19,10 @@ body {
     border-radius: 10px;
     background: linear-gradient(#4EC0CA, #87CEEB);
 }
-
+html, body {
+    overscroll-behavior-y: none;
+  }
+  
 #game-area {
     width: 100%;
     height: 100%;
