--- a/spin-the-bottle/styles.css
+++ b/spin-the-bottle/styles.css
@@ -6,7 +6,10 @@
 body {
     background-color: black;
 }
-
+html, body {
+    overscroll-behavior-y: none;
+  }
+  
 /* Containers */
 .container {
 
